# car-tracking

./: .gitignore  README.md  pyproject.toml
car_tracking/models/object_detection/: __init__.py  base.py  yolov5.py
car_tracking/models/object_tracking/: __init__.py  base.py  kalman_box.py  sort.py
car_tracking/pipelines/: __init__.py  base.py  tracking.py
car_tracking/scripts/: run_pipeline.py  save_frames.py  split_data.py
car_tracking/utils/: __init__.py  visualization.py
configs/: tracking.yaml
