[tool.poetry]
name = "car_tracking"
version = "0.1.0"
description = ""
authors = ["palandr1234"]
readme = "README.md"
packages = [{include = "car_tracking"}]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.25.0"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
opencv-python = ">=4.1.1"
matplotlib = ">=3.3"
pillow = ">=7.1.2"
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.14.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
ultralytics = ">=8.0.111"
tqdm = ">=4.64.0"
scipy = ">=1.4.1"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
gitpython = ">=3.1.30"
psutil = "^5.9.5"
pyyaml = ">=5.3.1"
requests = ">=2.23.0"
setuptools = ">=65.5.1"
traitlets = "^5.9.0"
pygments = "^2.15.1"
pexpect = "^4.8.0"
wcwidth = "^0.2.6"
clearml = ">=1.2.0"
tensorboard = ">=2.4.1"
filterpy = "^1.4.5"
